--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
   },
   "dependencies": {
     "leaflet": "^1.9.4",
-    "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "7.45.1",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@babel/core": "7.22.9",
     "@babel/preset-react": "7.22.5",
     "@babel/preset-typescript": "^7.28.5",
     "@types/leaflet": "^1.9.21",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "@types/react-modal": "^3.16.3",
     "babel-loader": "9.1.3",
     "css-loader": "6.8.1",
     "html-webpack-plugin": "5.5.1",
